--- a/index.html
+++ b/index.html
@@ -8,19 +8,24 @@
   <script src="node_modules/blockly/blocks_compressed.js"></script>
   <script src="node_modules/blockly/msg/en.js"></script>
   <script src="node_modules/blockly/generators/arduino_compressed.js"></script>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Executar Blocos</title>
+
+  
 </head>
 <body>
   <header class="header">
     <img src="assets/logo.png" class="logo" alt="Logo Ideia">
     <h1>Ideia Space Mission</h1>
   </header>
-
   <div class="container">
     <div id="blocklyDiv" class="blockly-area"></div>
     <div class="side-panel">
       <h3>🧠 Código C++</h3>
       <pre id="code-display" class="code-box">// Código C++ aparecerá aqui automaticamente</pre>
       <div class="monitor-section">
+      <button id="startButton">Start</button>
+      <p id="message"></p>
       </div>
     </div>
   </div>
