--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
       <h3>🧠 Código C++</h3>
       <pre id="code-display" class="code-box">// Código C++ aparecerá aqui automaticamente</pre>
       <div class="monitor-section">
-      <button id="startButton">Start</button>
+      <button id="startButton">&#9655; </button>
       <p id="message"></p>
       </div>
     </div>
