--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <script src="node_modules/blockly/blockly_compressed.js"></script>
   <script src="node_modules/blockly/blocks_compressed.js"></script>
   <script src="node_modules/blockly/msg/en.js"></script>
-  <script src="node_modules/blockly/generators/arduino_compressed.js"></script>
+  <script src="generators/arduino.js"></script>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Executar Blocos</title>
 
@@ -64,7 +64,7 @@
     </category>
   </xml>
 
-  <script src="./custom_blocks.js"></script>
+  <script src="./blocks/custom_blocks.js"></script>
   <script src="./renderer.js"></script>
 </body>
 </html>
